Get rid of separator and fix spacing after title

--- a/src/scss/page/main/date.scss
+++ b/src/scss/page/main/date.scss
@@ -3,7 +3,7 @@
 .pageMainDate {
 	.wrapper { width: 704px; margin: 0px auto; padding: 40px 0px 80px 0px; user-select: none; }
 
-	.headSimple { align-items: center; height: 32px; }
+	.headSimple { align-items: center; height: 32px; margin-bottom: 20px; }
 	.headSimple {
 		.side.right { gap: 0px; }
 		.side.right {
@@ -19,7 +19,6 @@
 	}
 	.categories {
 		.icon.mention { width: 20px; height: 20px; margin: 0px 6px 0px 0px; background-image: url('~img/icon/mention.svg'); }
-		.separator { content: ''; background-color:  var(--color-shape-secondary); width: 1px; height: 24px; }
 	}
 
 	.cell.c-type {
